overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ body {
 	padding-top: 2.4rem;
 	margin-bottom: 4.8rem;
 	color: var(--color-h1);
+	overflow: hidden ;
 	user-select: none;
 	-webkit-user-select: none; /* For Safari */
 	-moz-user-select: none; /* For Firefox */
